src/snapshots/bminor__parser__test__comparison_expression-2.snap
---
source: src/parser.rs
expression: "parse_expression(\"a != b\")"
---
Ok(
    Boolean {
        expression: Binary {
            left: Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "a",
                    line: 0,
                },
            },
            operator: Token {
                kind: BangEqual,
                lexeme: "!=",
                line: 0,
            },
            right: Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "b",
                    line: 0,
                },
            },
        },
    },
)
