src/snapshots/bminor__parser__test__comparison_expression-5.snap
---
source: src/parser.rs
expression: "parse_expression(\"a < b\")"
---
Ok(
    Binary {
        left: Variable {
            name: Token {
                kind: Identifier,
                lexeme: "a",
                line: 0,
            },
        },
        operator: Token {
            kind: Less,
            lexeme: "<",
            line: 0,
        },
        right: Variable {
            name: Token {
                kind: Identifier,
                lexeme: "b",
                line: 0,
            },
        },
    },
)
