src/snapshots/bminor__parser__test__declaration_statement-13.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [1] integer = {;\")"
---
Err(
    UnexpectedToken(
        "Token { kind: Semicolon, lexeme: \";\", line: 0 }",
    ),
)
