src/snapshots/bminor__parser__test__declaration_statement-14.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [1] integer = {1;\")"
---
Err(
    UnexpectedToken(
        "expect '}' after array elements",
    ),
)
