src/snapshots/bminor__parser__test__declaration_statement-20.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map;\")"
---
Err(
    UnexpectedToken(
        "expect map key type",
    ),
)
