src/snapshots/bminor__parser__test__declaration_statement-21.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map string;\")"
---
Err(
    UnexpectedToken(
        "expect map value type",
    ),
)
