src/snapshots/bminor__parser__test__declaration_statement-22.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map string int;\")"
---
Err(
    UnexpectedToken(
        "expect map value type",
    ),
)
